Project

General

Profile

Actions

Bug #36443

closed

msg/async: crashes when authenticator provided by verify_authorizer not implemented

Added by Sage Weil over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

see /a/sage-2018-10-14_19:01:57-rados-wip-sage2-testing-2018-10-14-1201-distro-basic-smithi/3139506

If client provides authenticator but dispatcher does not implement verify_authorizer, we get

2018-10-14T21:24:09.311 INFO:tasks.ceph.osd.3.smithi171.stderr:2018-10-14 21:24:09.322730 7fd1b8e6d700 -1 /home/jenkins-build/build/workspace/ceph-dev-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.2.8-457-gccd69ef/rpm/el7/BUILD/ceph-12.2.8-457-gccd69ef/src/auth/Crypto.h: In function 'int CryptoKey::encrypt(CephContext*, const bufferlist&, ceph::bufferlist&, std::string*) const' thread 7fd1b8e6d700 time 2018-10-14 21:24:09.320038
2018-10-14T21:24:09.311 INFO:tasks.ceph.osd.3.smithi171.stderr:/home/jenkins-build/build/workspace/ceph-dev-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.2.8-457-gccd69ef/rpm/el7/BUILD/ceph-12.2.8-457-gccd69ef/src/auth/Crypto.h: 109: FAILED assert(ckh)
2018-10-14T21:24:09.311 INFO:tasks.ceph.osd.3.smithi171.stderr:
2018-10-14T21:24:09.311 INFO:tasks.ceph.osd.3.smithi171.stderr: ceph version 12.2.8-457-gccd69ef (ccd69ef36aafebab964a2e47e249fdb95e083e46) luminous (stable)
2018-10-14T21:24:09.311 INFO:tasks.ceph.osd.3.smithi171.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0x5635b7189ea0]
2018-10-14T21:24:09.311 INFO:tasks.ceph.osd.3.smithi171.stderr: 2: (()+0x41cbec) [0x5635b6b0bbec]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 3: (CephxSessionHandler::_calc_signature(Message*, unsigned long*)+0x8c5) [0x5635b7456ba5]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 4: (CephxSessionHandler::check_message_signature(Message*)+0x7d) [0x5635b745700d]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 5: (AsyncConnection::process()+0x1b44) [0x5635b7440a04]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 6: (EventCenter::process_events(int, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> >*)+0x359) [0x5635b7225079]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 7: (()+0xb38c3e) [0x5635b7227c3e]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 8: (()+0xb5070) [0x7fd1bb6c9070]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 9: (()+0x7dd5) [0x7fd1bbd3cdd5]
2018-10-14T21:24:09.312 INFO:tasks.ceph.osd.3.smithi171.stderr: 10: (clone()+0x6d) [0x7fd1bae2db3d]

Related issues 2 (0 open2 closed)

Copied to Messengers - Backport #37427: luminous: msg/async: crashes when authenticator provided by verify_authorizer not implementedResolvedPrashant DActions
Copied to Messengers - Backport #37428: mimic: msg/async: crashes when authenticator provided by verify_authorizer not implementedResolvedNathan CutlerActions
Actions #1

Updated by Sage Weil over 5 years ago

  • Subject changed from msg/async: crashes when authenticator provided by verify_authorizer not implemented to mimic: msg/async: crashes when authenticator provided by verify_authorizer not implemented
  • Status changed from In Progress to Fix Under Review
  • Backport changed from mimic,luminous to luminous

https://github.com/ceph/ceph/pull/25156 (mimic)
only need to backport to luminous

Actions #2

Updated by Sage Weil over 5 years ago

  • Subject changed from mimic: msg/async: crashes when authenticator provided by verify_authorizer not implemented to msg/async: crashes when authenticator provided by verify_authorizer not implemented
  • Backport changed from luminous to luminous,mimic
Actions #3

Updated by Sage Weil over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37427: luminous: msg/async: crashes when authenticator provided by verify_authorizer not implemented added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37428: mimic: msg/async: crashes when authenticator provided by verify_authorizer not implemented added
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions #7

Updated by Greg Farnum about 5 years ago

  • Project changed from RADOS to Messengers
Actions

Also available in: Atom PDF